--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div id="footer-wrapper" style="background-image: url('../../../assets/images/footer/foot4.png')" class="pd-10">
+<div id="footer-wrapper" style="background-image: url('../../../assets/images/footer/foot4.png')" class="pdt-10 pdb-10">
   <div class="container">
     <div class="row pdt-10 " style="background-color:rgba(255,255,255,0.3);">
       <div class="col-md-3 col-sm-12 col-xs-12">
@@ -38,9 +38,10 @@
               <p>Fax:<span class="capitalize pdl-5"> 84438276554 </span></p>
               <p><a href="mailto:#" style="color: #220845;">Email:<span class="pdl-5">webmaster@vnua.edu.vn</span></a></p>
             </div>
+            <div class="clearfix"></div>
           </div>
 
-          <div class="col-md-6 col-xs-12">
+          <div class="col-md-6 col-xs-12 hidden-xs hidden-sm">
             <div class="pdb-15 map" >
               <img src="../../../assets/images/footer/map.png" alt="" class="img-responsive">
             </div>
