clear frontend3, scroll-top,top-component

--- a/src/app/tabs/tab-faculty/tab-faculty.component.css
+++ b/src/app/tabs/tab-faculty/tab-faculty.component.css
@@ -5,3 +5,7 @@ li.menu-wrapper>a:first-child:focus {
 li.menu-wrapper>a:first-child{
   padding-left: 10px  !important;
 }
+
+.bgc-red {
+  background-color: red !important;
+}
