--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -32,6 +32,7 @@
           </nav>
           <!---->
         </div>
+        <div class="__right" (click)="toggleNavbar()"></div>
       </div>
     </div>
   </div>
