--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -43,7 +43,8 @@
 
           <div class="col-md-6 col-xs-12 hidden-xs hidden-sm">
             <div class="pdb-15 map" >
-              <img src="../../../assets/images/footer/map.png" alt="" class="img-responsive">
+              <app-map></app-map>
+              <!--<img src="../../../assets/images/footer/map.png" alt="" class="img-responsive">-->
             </div>
           </div>
         </div>
