--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,32 +1,39 @@
 #navbar {
   background-color: #eeeeee;
 }
-#navbar .my-navbar{
+
+#navbar .my-navbar {
   padding-top: 15px;
-  padding-bottom:15px;
+  padding-bottom: 15px;
+
 }
+
 #navbar ul {
   display: table;
   margin: 0;
-  padding:0;
+  padding: 0;
 }
-#navbar ul li{
+
+#navbar ul li {
   display: table-cell;
   /*width:130px;*/
-  height:0px;
+  height: 0px;
   font-size: 0;
 }
-#navbar li a:hover,#navbar li a:focus,#navbar li a:active,#navbar li a:visited{
+
+#navbar li a:hover, #navbar li a:focus, #navbar li a:active, #navbar li a:visited {
   color: #000;
 }
-#navbar li a{
+
+#navbar li a {
   padding: 15px 30px;
   font-size: 20px;
   font-family: 'Roboto Slab', serif;
   font-weight: 300;
   position: relative;
 }
-#navbar li a:before{
+
+#navbar li a:before {
   content: "";
   width: 0px;
   display: block;
@@ -38,11 +45,13 @@
   right: 0;
   transition: 0.5s ease-in-out;
 }
-#navbar li a:hover:before{
+
+#navbar li a:hover:before {
   border-top: 1px solid #3c763d;
   width: 50%;
 }
-#navbar li a:after{
+
+#navbar li a:after {
   content: "";
   height: 30px;
   left: 0;
@@ -53,61 +62,81 @@
   position: absolute;
 }
 
-#navbar ul li:last-child a:after{
+#navbar ul li:last-child a:after {
   display: none;
 }
 
-#navbar .nav-icon{
+#navbar .nav-icon {
   float: right;
   position: absolute;
   top: -15px;
   right: 0px;
 }
 
-
-#navbar li.close-nav-parent{
+#navbar li.close-nav-parent {
   display: none !important;
 }
 
-@media(max-width: 767px) {
-  #navbar{
-    width: 300px;
+.__right {
+  display: none;
+  z-index: 99999;
+}
+
+@media (max-width: 767px) {
+  #navbar {
     transition: 0.4s ease-in-out;
     position: fixed;
+    background: none;
     z-index: 5555555;
   }
-  #navbar .my-navbar
-  {
+
+  #navbar {
+    width: 100vw;
+  }
+
+  #navbar .my-navbar {
+    width: 80vw;
     padding-top: 0;
-    padding-bottom:0;
+    padding-bottom: 0;
+    height: 100vh;
+    position: absolute;
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color: #eeeeee;;
   }
-  #navbar ul{
+
+  #navbar ul {
     display: block;
-    padding:0;
+    padding: 0;
   }
-  #navbar ul li{
+
+  #navbar ul li {
     display: block;
     height: auto;
   }
-  #navbar ul li a{
+
+  #navbar ul li a {
     font-size: 16px;
-    line-height:40px;
+    line-height: 40px;
     border-bottom: 1px solid #000;
     padding-top: 15px;
-    padding-bottom:15px;
+    padding-bottom: 15px;
     display: block;
   }
-  #navbar ul li a:before
-  {
+
+  #navbar ul li a:before {
     display: none;
   }
-  #navbar ul li:last-child a{
+
+  #navbar ul li:last-child a {
     border: none;
   }
-  #navbar li a:after{
+
+  #navbar li a:after {
     display: none;
   }
-  .revert-navbar{
+
+  .revert-navbar {
     position: absolute;
     right: 10px;
     top: 0px;
@@ -117,42 +146,49 @@
     padding: 20px;
     padding-right: 30px;
   }
-  .revert-navbar span{
+
+  .revert-navbar span {
     display: block;
     border: 1px solid #ffffff;
     width: 25px;
     margin-top: 5px;
-    margin-bottom:5px;
+    margin-bottom: 5px;
     content: '';
     z-index: 1000;
   }
 
-  #navbar{
-    transform: translateX(-300px);
+  #navbar {
+    transform: translateX(-100vw);
     position: fixed;
     top: 0;
   }
-  #navbar.nav-toggle{
+
+  #navbar .col-xs-12{
+    padding-left: 0;
+  }
+  #navbar.nav-toggle {
     transform: translateX(0px);
   }
 
-  a.close-navbar{
+  a.close-navbar {
     border: none;
   }
 
-
-  #navbar li.close-nav-parent{
+  #navbar li.close-nav-parent {
     display: block !important;
   }
-  #navbar ul li:first-child a{
+
+  #navbar ul li:first-child a {
     border: none;
     position: absolute;
     padding-right: 10px;
-    right: 0px;
+    top: 5px;
+    right: 0;
     z-index: 11111;
 
   }
-  #navbar ul li .close-navbar{
+
+  #navbar ul li .close-navbar {
     display: block;
     width: 25px;
     border-top: 2px solid;
@@ -160,30 +196,32 @@
     transform-origin: 56% 50%;
   }
 
-  #navbar  .close-navbar:nth-child(1){
-    transform:  rotate(-45deg);
+  #navbar .close-navbar:nth-child(1) {
+    transform: rotate(-45deg);
   }
 
-  #navbar  .close-navbar:nth-child(2){
-    transform:  rotate(45deg);
+  #navbar .close-navbar:nth-child(2) {
+    transform: rotate(45deg);
   }
 
-
+  .__right {
+    display: block;
+    width: 20vw;
+    height: 100vh;
+    background: rgba(204, 204, 204, 0.7);
+    position: absolute;
+    right: 0;
+    top:0;
+  }
 }
 
-
-/*@media (min-width: 991px){*/
-
-/*#navbar ul li:first-child a{*/
-/*padding-left: 0;*/
-/*}*/
-/*}*/
-#navbar ul li a:hover{
+#navbar ul li a:hover {
   color: #8d9c00;
 }
-@media (max-width: 991px){
 
-  #navbar ul li a{
+@media (max-width: 991px) {
+
+  #navbar ul li a {
     padding: 10px 20px;
   }
 }
