create commponent curricumlun-vitae.

--- a/src/app/components/footers/footer/footer.component.html
+++ b/src/app/components/footers/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div id="footer-wrapper" style="background-image: url('../../../assets/images/footer/foot4.png')" class="pdt-10 pdb-10">
+<div id="footer-wrapper" style="background-image: url('../../../../assets/images/footer/foot4.png')" class="pdt-10 pdb-10">
   <div class="container">
     <div class="row pdt-10 " style="background-color:rgba(255,255,255,0.3);">
       <div class="col-md-3 col-sm-12 col-xs-12">
