--- a/src/app/components/sliders/slider-faculty/slider-faculty.component.html
+++ b/src/app/components/sliders/slider-faculty/slider-faculty.component.html
@@ -4,7 +4,7 @@
   <div class="carousel-inner">
 
     <a href="#" class="item active">
-      <img src="../../../assets/images/khoa/khoa1.png" alt="" class="img-responsive pdb-15">
+      <img src="../../../../assets/images/khoa/khoa1.png" alt="" class="img-responsive pdb-15">
       <div class="rol-title pdb-10">
         Khoa nông học
       </div>
