--- a/src/app/components/headers/header/head1.html
+++ b/src/app/components/headers/header/head1.html
@@ -11,7 +11,7 @@
                     <div class="content-left">
                         <div class="table-cell-wrapper">
                             <div class="logo cell-middle">
-                                <img src="../../../assets/images/logo/logo3.png" class="img-responsive"/>
+                                <img src="../../../../assets/images/logo/logo3.png" class="img-responsive"/>
                                 <!--<img src="../../../assets/images/logo/nonghoc.png" class="img-responsive"/>-->
                             </div>
                         </div>
