--- a/src/app/components/tabs/tab-left/tab-left.component.html
+++ b/src/app/components/tabs/tab-left/tab-left.component.html
@@ -2,14 +2,14 @@
 
 
   <div class="icon-tab-open" (click)="toggleTab()">
-    <img src="../../../assets/images/logo/arrows.png" alt="">
+    <img src="../../../../assets/images/logo/arrows.png" alt="">
   </div>
   <div class="tab-left">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#home1">Khoa</a></li>
       <li><a data-toggle="tab" href="#menu11">Phòng Ban</a></li>
       <!--<li><i class="fa fa-close icon-tab-close"> <img src="../../../assets/images/logo/arrows.png" alt=""></i></li>-->
-      <li><img src="../../../assets/images/logo/close.png" alt="" class="icon-tab-close" (click)="toggleTab()"></li>
+      <li><img src="../../../../assets/images/logo/close.png" alt="" class="icon-tab-close" (click)="toggleTab()"></li>
     </ul>
 
     <div class="tab-content">
