--- a/src/app/personnels/curriculum-vitae/curriculum-vitae.component.css
+++ b/src/app/personnels/curriculum-vitae/curriculum-vitae.component.css
@@ -1,5 +1,3 @@
-
-
 img {
   max-width: 100px;
 }
@@ -26,3 +24,12 @@ img {
     clear: both;
   }
 }
+
+
+
+/*@media (max-width: 1199px) {*/
+  /*.right .item-control input{*/
+     /*float: none;*/
+      /*display: block;*/
+  /*}*/
+/*}*/
