--- a/src/app/personnels/curriculum-vitae/curriculum-vitae.component.html
+++ b/src/app/personnels/curriculum-vitae/curriculum-vitae.component.html
@@ -14,7 +14,7 @@
         <div>
 
           <div style="float: left;"
-               class="mgr-15 image-info" [style.background]="'url(' + infoBasic.image + ')'">
+               class="mgr-15 image-info mgb-10 mgt-10" [style.background]="'url(' + infoBasic.image + ')'">
             <input type="file" accept=".jpg,.png"  title="Chọn ảnh">
           </div>
 
@@ -62,7 +62,7 @@
 
         <div class="item-control">
           <label>Dân tộc </label>
-          <select formControlName="nation">
+          <select formControlName="nation" class="form-control">
             <option value="kinh">Kinh</option>
             <option value="2">Thai</option>
           </select>
@@ -70,7 +70,7 @@
 
         <div class="item-control">
           <label>Tôn giáo</label>
-          <select>
+          <select class="form-control">
             <option value="0">Không</option>
             <option value="1">Có</option>
           </select>
@@ -108,7 +108,7 @@
 
         <div class="item-control">
           <label>Hoàn cảnh xuất thân </label>
-          <select formControlName="job">
+          <select formControlName="job" class="form-control">
             <option value="0">Không</option>
             <option value="1">Có</option>
           </select>
@@ -116,7 +116,7 @@
 
         <div class="item-control">
           <label>Nhóm máu </label>
-          <select formControlName="bloodGroup">
+          <select formControlName="bloodGroup" class="form-control">
             <option value="select">----Chọn-----</option>
             <option value="A">A</option>
             <option value="A">AB</option>
@@ -126,7 +126,7 @@
 
         <div class="item-control">
           <label>Đối tượng chính sách </label>
-          <select formControlName="policyObject" class="policy-object">
+          <select formControlName="policyObject" class="policy-object form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -141,13 +141,13 @@
 
     <div class="col-xs-12 col-sm-4 col-md-4">
       <!---------------------que quan-------------------------->
-      <div class="form-item mgb-20" formGroupName="homeTown">
+      <div class="form-item mgb-20" formGroupName="homeTown ">
         <div class="form-item-title " >
           Quê quán
         </div>
         <div class="item-control">
           <label>Quốc gia  </label>
-          <select formControlName="national">
+          <select formControlName="national" class="form-control">
             <option value="select">----Chọn-----</option>
             <option value="A">A</option>
             <option value="A">AB</option>
@@ -157,7 +157,7 @@
 
         <div class="item-control">
           <label>Tình/TP </label>
-          <select formControlName="city">
+          <select formControlName="city" class="form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -168,7 +168,7 @@
 
         <div class="item-control">
           <label>Quận/Huyện  </label>
-          <select formControlName="district">
+          <select formControlName="district" class="form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -191,7 +191,7 @@
         <a href="javascript:void(0)" style="text-decoration: underline"> Bấm vào đây nếu nơi sinh của quý vị là quê quán </a>
         <div class="item-control">
           <label>Quốc gia  </label>
-          <select formControlName="national">
+          <select formControlName="national" class="form-control">
             <option value="select">----Chọn-----</option>
             <option value="A">A</option>
             <option value="A">AB</option>
@@ -201,7 +201,7 @@
 
         <div class="item-control">
           <label>Tình/TP </label>
-          <select formControlName="city">
+          <select formControlName="city" class="form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -212,7 +212,7 @@
 
         <div class="item-control">
           <label>Quận/Huyện  </label>
-          <select formControlName="district">
+          <select formControlName="district" class="form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -259,7 +259,7 @@
         </div>
         <div class="item-control">
           <label>Tình/TP </label>
-          <select formControlName="city">
+          <select formControlName="city" class="form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -270,7 +270,7 @@
 
         <div class="item-control">
           <label>Quận/Huyện  </label>
-          <select formControlName="district">
+          <select formControlName="district" class="form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -282,7 +282,7 @@
 
         <div class="item-control">
           <label>Phường/Xã   </label>
-          <select formControlName="guild">
+          <select formControlName="guild" class="form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -310,7 +310,7 @@
         <a href="javascript:void(0)" style="text-decoration: underline">Bấm vào đây nếu nơi ở của quý vị cũng là nơi đăng kí hộ khẩu thường chú </a>
         <div class="item-control">
           <label>Quốc gia  </label>
-          <select formControlName="national">
+          <select formControlName="national" class="form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -319,9 +319,9 @@
           </select>
         </div>
 
-        <div class="item-control">
+        <div class="item-control" >
           <label>Tình/TP </label>
-          <select formControlName="city">
+          <select formControlName="city" class="form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -332,7 +332,7 @@
 
         <div class="item-control">
           <label>Quận/Huyện  </label>
-          <select formControlName="district">
+          <select formControlName="district" class="form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
@@ -344,7 +344,7 @@
 
         <div class="item-control">
           <label>Phường/Xã   </label>
-          <select formControlName="guild">
+          <select formControlName="guild"  class="form-control">
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
             <option value="2">2</option>
