--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,3 +1,5 @@
 <div class="container">
+  <app-note-form></app-note-form>
+  <app-party-union></app-party-union>
   <app-curriculum-vitae></app-curriculum-vitae>
 </div>
