--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <app-process-work></app-process-work>
+  <app-family-relationship></app-family-relationship>
   <app-note-form></app-note-form>
   <app-party-union></app-party-union>
   <app-curriculum-vitae></app-curriculum-vitae>
