--- a/src/app/personnels/party-union/party-union.component.css
+++ b/src/app/personnels/party-union/party-union.component.css
@@ -1,16 +1,16 @@
-th,td{
-  text-align: center;
-  vertical-align: middle !important;
-}
 
 .form-control{
   border-radius: 0;
 }
 
-modal .modal-lg{
+:host-context /deep/ .my-modal-lg{
   width: 1170px !important;
 }
 
 .my-modal-lg{
   width: 1170px !important;
+}
+
+table td .form-control {
+  width: 100%;
 }
