create layout contract

--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <app-contract></app-contract>
   <app-process-work></app-process-work>
   <app-family-relationship></app-family-relationship>
   <app-note-form></app-note-form>
