--- a/src/app/personnels/form.css
+++ b/src/app/personnels/form.css
@@ -46,7 +46,10 @@ form {
   padding: 5px;
   min-width: 200px;
 }
-
+.item-control input[type='number']{
+  padding: 5px;
+  width: 80px;
+}
 .item-control input[type='radio'], .item-control input[type='checkbox'] {
   /*float: right;*/
   /*width: 60%;*/
