create component acadimic-rank,bonus-discipline

--- a/src/app/personnels/contract/contract.component.html
+++ b/src/app/personnels/contract/contract.component.html
@@ -1,179 +1,77 @@
-<form action="">
-  <div class="action-form">
+<form action="" [formGroup]="formData">
+  <div class="action-form mgb-20">
     <button>Ghi nhận</button>
-    <button>Khóa dữ liệu</button>
+    <button>Khóa dữ liêu</button>
   </div>
-  <!---->
-  <app-note-form></app-note-form>
-  <!---->
-  <div class="mgb-20">
-    <label>Trình độ giáo dục phổ thông </label>
-    <select name="" id="" class="form-control" style="float: none;width: 150px !important;min-width: 0">
-      <option value="1">1/12</option>
-      <option value="2">2/12</option>
-      <option value="3">3/12</option>
-      <option value="4">4/12</option>
-      <option value="5">5/12</option>
-      <option value="6">6/12</option>
-      <option value="7">7/12</option>
-    </select>
-  </div>
-  <!---->
-  <div class="form-item long-time  ">
+  <app-note-form2>
+    <p>Ô nhập ngày tháng, nếu quý vị không nhớ rõ thì nhập là ngày 01, tháng năm bắt buộc phải nhập chính sác.</p>
+    <p>Khi chiết xuất dữ liệu chỉ sử dụng tháng năm</p>
+  </app-note-form2>
+  <div class="form-item">
     <div class="form-item-title">
-      Quá trình đào tạo dài hạn
+      Danh sách hợp đồng lao động
     </div>
-    <table class="table table-bordered">
-      <thead>
-      <tr>
-        <th>STT</th>
-        <th>Từ năm</th>
-        <th>Đến năm</th>
-        <th>Chuyên nghành</th>
-        <th>Bậc học</th>
-        <th>Học vị đạt được</th>
-        <th>Xếp loại</th>
-        <th>Trường đào tạo</th>
-        <th>Nước đào tạo</th>
-        <th>
-          <span class="action-icon"><i class="fa fa-plus"></i></span>
-          <span class="action-icon"><i class="fa fa-remove icon-remove-update"></i></span>
-        </th>
-      </tr>
-      </thead>
-
-      <tbody>
-      <tr>
-        <td>
-        </td>
+    <div class="table-responsive">
+      <table class="table table-bordered">
+        <thead>
+        <tr>
+          <th>STT</th>
+          <th>Số HD</th>
+          <th>Loại HD</th>
+          <th>Ngày hiệu lực</th>
+          <th>Ngày hết hiệu lực</th>
+          <th>Đơn vị tuyển dụn</th>
+          <th>Công việc đảm nhận</th>
+          <th>
+            <span class="action-icon"><i class="fa fa-plus"></i></span>
+            <span class="action-icon" (click)="resetForm(formData)"><i
+              class="fa fa-remove icon-remove-update"></i></span>
+          </th>
+        </tr>
+        </thead>
+        <tbody>
         <!---->
-        <td>
-          <div class="item-control">
-            <input type="text" class="date"/>
-          </div>
-        </td>
-
-        <td>
-          <div class="item-control">
-            <input type="text" class="date"/>
-          </div>
-        </td>
-
-        <td>
-          <div class="item-control">
-            <input type="text"/>
-          </div>
-        </td>
-        <td>
-          <div class="item-control">
-            <select name="" class="form-control">
-              <option value="">----Chọn-----</option>
+        <tr>
+          <td></td>
+          <td><input type="text" class="form-control" style="width: 100px" formControlName="number"></td>
+          <td>
+            <select class="form-control"  formControlName="specie">
+              <option value="">--------Chọn---------</option>
+              <option value="">--------Chọn---------</option>
             </select>
-          </div>
-        </td>
+          </td>
+          <td><input type="text" class="form-control"  formControlName="dateEffect"></td>
+          <td><input type="text" class="form-control"  formControlName="dateEndEffect"></td>
+          <td>
+            <select class="form-control"  formControlName="unitOrgan">
+              <option value="">--------Chọn---------</option>
+              <option value="">--------Chọn---------</option>
+            </select></td>
+          <td><input type="text" class="form-control"  formControlName="job"></td>
+          <td>
+            <span class="action-icon" (click)="addItem()"><i class="fa fa-save"></i></span>
+            <span class="action-icon" (click)="resetForm(formData)"><i
+              class="fa fa-remove icon-remove-update"></i></span>
+          </td>
+        </tr>
+        <!--content-->
+        <tr *ngFor="let item of listContracts.toArray();let i = index">
+          <td>{{i+1}}</td>
+          <td>{{item.number}}</td>
+          <td>{{item.specie}}</td>
+          <td>{{item.dateEffect}}</td>
+          <td>{{item.dateEndEffect}}</td>
+          <td>{{item.unitOrgan}}</td>
+          <td>{{item.job}}</td>
+          <td>
+            <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
+            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+            <span class="action-icon" ><i class="fa fa-lock"></i></span>
+          </td>
+        </tr>
         <!---->
-        <td>
-          <div class="item-control">
-            <input type="text"/>
-          </div>
-        </td>
-        <!---->
-        <td style="vertical-align: top">
-          <select name="" class="form-control">
-            <option value="">----Chọn-----</option>
-          </select>
-        </td>
-        <!---->
-        <td>
-          <div class="item-control">
-            <input type="text"/>
-          </div>
-        </td>
-        <!---->
-        <td style="vertical-align: top">
-          <select name="" class="form-control">
-            <option value="">----Chọn-----</option>
-          </select>
-        </td>
-        <!---->
-        <td>
-          <span class="action-icon" (click)="onSave()"><i class="fa fa-save"></i></span>
-          <span class="action-icon" (click)="resetProcess()"><i
-            class="fa fa-remove icon-remove-update"></i></span>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-  </div >
-  <!---->
-  <div class="form-item short-time">
-    <div class="form-item-title">
-      Quá trình đào tạo ngắn hạn
+        </tbody>
+      </table>
     </div>
-    <table class="table table-bordered">
-      <thead>
-      <tr>
-        <th>STT</th>
-        <th>Từ tháng/năm </th>
-        <th>Số tháng </th>
-        <th>Chứng chỉ </th>
-        <th>Nơi đào tạo </th>
-        <th>Nước đào tạo </th>
-        <th>Mô tả </th>
-        <th>
-          <span class="action-icon"><i class="fa fa-plus"></i></span>
-          <span class="action-icon"><i class="fa fa-remove icon-remove-update"></i></span>
-        </th>
-      </tr>
-      </thead>
-
-      <tbody>
-      <tr>
-        <td>
-        </td>
-        <!---->
-        <td>
-          <div class="item-control">
-            <input type="text" class=""/>
-          </div>
-        </td>
-
-        <td>
-          <div class="item-control">
-            <input type="number" class="date" min="1"/>
-          </div>
-        </td>
-
-        <td>
-          <div class="item-control">
-            <input type="text"/>
-          </div>
-        </td>
-        <td>
-          <div class="item-control">
-            <input type="text"/>
-          </div>
-        </td>
-        <!---->
-        <td style="vertical-align: top">
-          <select name="" class="form-control">
-            <option value="">----Chọn-----</option>
-          </select>
-        </td>
-        <!---->
-        <td>
-          <div class="item-control">
-            <input type="text"/>
-          </div>
-        </td>
-        <!---->
-        <td>
-          <span class="action-icon" (click)="onSave()"><i class="fa fa-save"></i></span>
-          <span class="action-icon" (click)="resetProcess()"><i
-            class="fa fa-remove icon-remove-update"></i></span>
-        </td>
-      </tr>
-      </tbody>
-    </table>
   </div>
 </form>
