--- a/src/app/personnels/notes/note-form/note-form.component.html
+++ b/src/app/personnels/notes/note-form/note-form.component.html
@@ -9,5 +9,6 @@
       <span><i class="fa fa-save "></i></span> Ghi nhận để cập nhật thông tin </p>
     <p>* Quý vị nhấn icon <span><i class="fa fa-remove icon-remove-update "></i></span> này để bỏ qua việc cập nhật </p>
     <p>* Quý vị nhấn icon <span><i class="fa fa-remove  "></i></span> này để xóa dữ liệu </p>
+    <ng-content></ng-content>
   </div>
 </div>
