--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,8 +1,37 @@
 <div class="container">
+  <!--Học hàm , danh hiệu nhà giáo -->
+  <app-academic-rank></app-academic-rank>
+  <!--kỷ luật khen thưởng -->
+  <app-bonus-discipline></app-bonus-discipline>
+
+  <!--Trinh độ ngoại ngữ -->
+  <app-foreign-language></app-foreign-language>
+
+  <!--Trinh do chinh tri-->
+  <app-politic></app-politic>
+
+  <!--Trinh do tin hoc -->
+  <app-info-technology></app-info-technology>
+
+  <!--Qua trinh dao tao-->
+  <app-train></app-train>
+
+  <!--thong tin hop dong-->
   <app-contract></app-contract>
+
+
+  <!--Qúa trình làm việc -->
   <app-process-work></app-process-work>
+
+  <!--Quan hệ gia đình -->
   <app-family-relationship></app-family-relationship>
+
+  <!--lưu ý form-->
   <app-note-form></app-note-form>
+
+  <!--Đảng đoàn công đoàn -->
   <app-party-union></app-party-union>
+
+  <!--Sơ yếu lí lịch -->
   <app-curriculum-vitae></app-curriculum-vitae>
 </div>
