--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,4 +1,10 @@
 <div class="container">
+  <!--QUa trinh di nuoc ngoai-->
+  <app-foreign></app-foreign>
+  <!--nhap thong tin nghach l-uong-->
+  <app-salary-brief></app-salary-brief>
+  <!--danh hieu thi dua -->
+  <app-emulation-title></app-emulation-title>
   <!--Học hàm , danh hiệu nhà giáo -->
   <app-academic-rank></app-academic-rank>
   <!--kỷ luật khen thưởng -->
